--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,12 @@
 }
 
 .loginFormCt,
-.loginBtnsCt {
+.loginBtnsCt,
+.guestFormCt {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    transition: all 0.3s ease;
 }
 
